--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,14 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lines-ellipsis": "^0.15.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.0"
   },
