--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "config": "^3.3.7",
     "cors": "^2.8.5",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.1.8",
     "nodemon": "^2.0.15"
   }
