--- a/server/package.json
+++ b/server/package.json
@@ -8,12 +8,18 @@
   "scripts": {
     "start": "nodemon index.js"
   },
+  "engines": {
+    "node": "16.13.2"
+  },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "compression": "^1.7.4",
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
+    "helmet": "^5.0.2",
+    "heroku": "^7.59.2",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
