--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "author": "Shakxzod",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "engines": {
     "node": "16.13.2"
